--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ricardo Sulbaran email: ricardodjsc@gmail.com",
   "license": "ISC"
 }
